# stumpwm

./: .cvsignore  .dir-locals.el  .dockerignore  .gitattributes  .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  HACKING  Makefile  Makefile.in  NEWS  README  README.md  asdf.lisp  autogen.sh  bindings.lisp  ci  color.lisp  command.lisp  conditions.lisp  config-system.lisp  configure.ac  core.lisp  debug.lisp  dynamic-floating-group.lisp  dynamic-group.lisp  dynamic-mixins-patch.lisp  dynamic-window.lisp  events.lisp  fdump.lisp  floating-group.lisp  font-rendering.lisp  frame.lisp  gravity.lisp  group.lisp  head.lisp  help.lisp  input.lisp  (+62 more)
.github/workflows/: test.yml
contrib/: amixer.lisp  app-menu.lisp  aumix.lisp  battery-portable.lisp  battery.lisp  cpu.lisp  disk.lisp  g15-keysyms.lisp  kbd-brightness.lisp  maildir.lisp  mem.lisp  mpd.lisp  net.lisp  notifications.lisp  passwd.lisp  productivity.lisp  sbclfix.lisp  stumpish  stumptray.lisp  stumpwm-mode.el  surfraw.lisp  undocumented.lisp  wifi.lisp  window-tags.lisp  wmii-like-stumpwmrc.lisp
contrib/debian/: menu-method
dynamic-mixins/: README.md  dynamic-mixins-swm.asd  dynamic-mixins.asd
dynamic-mixins/src/: dynamic-mixins.lisp  package.lisp  sorting.lisp
stumpui/: protocols.lisp  windows.lisp
tests/: config-system.lisp  kmap.lisp  mode-line-formatters.lisp  package.lisp  pathnames.lisp
tests/integration-tests/: Dockerfile  Makefile  README.md  generate-tests  run  run-one-test  script  tests-expected-to-fail
tests/integration-tests/container-scripts/: check-invariants  generate-test-code  generate-tests  install-dependencies-for-test-cases  install-deps  install-packages  install-sbcl  install-stumpwm  install-stumpwm-dependencies  open-test-window  open-test-window-with-bash  open-test-window-with-font-size  run-test  screenshot  screenshots-differ  screenshots-match  send-keys  set-resolution  start-stumpwm  start-xvfb-with-max-resolution  stumpwm-cmd  stumpwm-load  x-remap-modifiers  x-swap-keys
tests/integration-tests/stumpwm.d/: init.lisp  invariants.lisp
tests/integration-tests/testcases/: 002.sh  003.sh  005.sh  006.sh  issue-0928.sh  issue-0972.sh  issue-0993.sh  issue-0997.sh  issue-1000.sh  issue-1002-remove.sh  issue-1002.sh  issue-1004.sh  issue-1005.sh  issue-1006.sh  issue-1015.sh  issue-1016.sh  issue-1031.sh  issue-1032.sh  test-basic-iresize.sh  test-basic.sh  test-check-invariants.sh  test-send-keys.sh
tmp/: dynamic-floating-group.manual.org  usage.md
tmp/example-config/: init.lisp
